ExampleManifest/kyverno_test_policies-main/Manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basicendpoint
  labels:
    app: basicendpoint
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: basicendpoint
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: basicendpoint
    spec:
      containers:
      - image: esteban0477/basicendpointread:latest
        imagePullPolicy: Always
        name: basicendpoint
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        ports:
        - containerPort: 8080
          protocol: TCP
