ExampleManifest/kyverno_test_policies-main/Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basicendpoint
  namespace: default
spec:
  selector:
    app: basicendpoint
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
